# to_group

./: README.md
to_group/: Cargo.toml
to_group/src/: app_state.rs  lib.rs  main.rs  router.rs
to_group/src/helper/: app_error.rs  handler.rs  hash.rs  jwt.rs  mod.rs  response_model.rs  schema.rs
to_group/src/middleware/: require_auth.rs
to_group/src/routes/: create_todo.rs  create_user.rs  get_all_todo.rs  get_one_todo.rs  login.rs  logout.rs  mod.rs  update_todo.rs  update_user.rs
to_group_app/: README.md  pubspec.yaml
to_group_app/android/app/: build.gradle
to_group_app/android/app/src/main/: AndroidManifest.xml
to_group_app/ios/Runner/: Info.plist
to_group_app/ios/Runner.xcodeproj/: project.pbxproj
to_group_app/lib/: main.dart  themes.dart
to_group_app/lib/api/: auth.dart  auth.g.dart  local.dart  local.g.dart  todo.dart  todo.g.dart
to_group_app/lib/model/: login_model.dart  object_id.dart  todo.dart
to_group_app/lib/page/: home_page.dart  login_page.dart  sign_up_page.dart  splash_page.dart
to_group_app/lib/provider/: auth_provider.dart  auth_provider.g.dart  sign_in_provider.dart  sign_in_provider.g.dart  sign_up_provider.dart  sign_up_provider.g.dart  todos_provider.dart  todos_provider.g.dart
to_group_app/linux/: CMakeLists.txt  my_application.cc
to_group_app/macos/Runner.xcodeproj/: project.pbxproj
to_group_app/macos/Runner/Configs/: AppInfo.xcconfig
to_group_app/web/: index.html  manifest.json
to_group_app/windows/: CMakeLists.txt
to_group_app/windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
