[package]
name = "to_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["mysql", "chrono"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.29"
jsonwebtoken = "9.2.0"
mongodb = "2.7.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
validator = { version = "0.16.1", features = ["derive"] }
